[gd_scene load_steps=8 format=3 uid="uid://xu87r8s00jp5"]

[ext_resource type="Texture2D" uid="uid://dpbu35eor2ync" path="res://resources/texture/ui/arrows/cube_arrow_left.png" id="2_lxacw"]
[ext_resource type="Texture2D" uid="uid://bq2ijrbywnptk" path="res://resources/texture/ui/box/grey_box.png" id="2_r8ho5"]
[ext_resource type="Script" uid="uid://bontmbnaqfowg" path="res://src/scene/ui/app_element_ui/omni_file_browser_ui.gd" id="2_xjibq"]
[ext_resource type="Texture2D" uid="uid://b70agpyev5l6n" path="res://resources/texture/ui/arrows/cube_arrow_up.png" id="3_tbk20"]
[ext_resource type="Texture2D" uid="uid://canyv2umqfg7e" path="res://resources/texture/ui/arrows/cube_arrow_right.png" id="4_erp7k"]
[ext_resource type="PackedScene" uid="uid://bq42tvt2m46uf" path="res://src/scene/prefab/ui/file_browser/favorite_folder_button.tscn" id="6_tbk20"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ddpxx"]
bg_color = Color(0.0392157, 0.0392157, 0.0392157, 0.545098)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.133196, 0.133196, 0.133196, 0.243137)
border_blend = true

[node name="file_browser_ui" type="MarginContainer"]
custom_minimum_size = Vector2(288, 136)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4
script = ExtResource("2_xjibq")

[node name="vbox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="file_browser_toolbar" type="PanelContainer" parent="vbox"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ddpxx")

[node name="toolbar_hbox" type="HBoxContainer" parent="vbox/file_browser_toolbar"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="d_back_button" type="Button" parent="vbox/file_browser_toolbar/toolbar_hbox"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 8
icon = ExtResource("2_lxacw")
expand_icon = true

[node name="d_up_button" type="Button" parent="vbox/file_browser_toolbar/toolbar_hbox"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 8
icon = ExtResource("3_tbk20")
expand_icon = true

[node name="d_forward_button" type="Button" parent="vbox/file_browser_toolbar/toolbar_hbox"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 8
icon = ExtResource("4_erp7k")
expand_icon = true

[node name="git_info_title" type="RichTextLabel" parent="vbox/file_browser_toolbar/toolbar_hbox"]
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="folder_title" type="RichTextLabel" parent="vbox/file_browser_toolbar/toolbar_hbox"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
scroll_active = false
autowrap_mode = 0

[node name="grid_mode_toggler" type="Button" parent="vbox/file_browser_toolbar/toolbar_hbox"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
icon = ExtResource("2_r8ho5")
flat = true
expand_icon = true

[node name="h_split" type="HSplitContainer" parent="vbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="favorite_folder_scroll_box" type="ScrollContainer" parent="vbox/h_split"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="vbox" type="VBoxContainer" parent="vbox/h_split/favorite_folder_scroll_box"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" parent="vbox/h_split/favorite_folder_scroll_box/vbox" instance=ExtResource("6_tbk20")]
layout_mode = 2

[node name="scroll_box" type="ScrollContainer" parent="vbox/h_split"]
custom_minimum_size = Vector2(280, 110)
layout_mode = 2
size_flags_vertical = 3

[node name="file_grid" type="GridContainer" parent="vbox/h_split/scroll_box"]
custom_minimum_size = Vector2(270, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 1
columns = 3

[node name="file_list" type="VBoxContainer" parent="vbox/h_split/scroll_box"]
layout_mode = 2

[connection signal="button_up" from="vbox/file_browser_toolbar/toolbar_hbox/d_back_button" to="." method="_on_button_up"]
[connection signal="button_up" from="vbox/file_browser_toolbar/toolbar_hbox/d_up_button" to="." method="_on_button_up"]
[connection signal="button_up" from="vbox/file_browser_toolbar/toolbar_hbox/d_forward_button" to="." method="_on_button_up"]
[connection signal="button_down" from="vbox/file_browser_toolbar/toolbar_hbox/grid_mode_toggler" to="." method="_on_grid_mode_toggler_button_down"]
[connection signal="button_up" from="vbox/file_browser_toolbar/toolbar_hbox/grid_mode_toggler" to="." method="_on_button_up"]
